src/App.css
.App {
  text-align: center;
}

body {
  background: #CFD3E0 !important;
}



.page-header::before {
  background-image: url('./images/textures/old_moon.png');
  content: "";
  animation: grain 8s steps(10) infinite;
  position: fixed;
  height: 300%;
  width: 300%;
  top: -110%;
  left: -50%;
  opacity: 0.6;
  z-index: -1;
}

@keyframes grain {
  0%, 100% { transform:translate(0, 0) }
  10% { transform:translate(-5%, -10%) }
  20% { transform:translate(-15%, 5%) }
  30% { transform:translate(7%, -25%) }
  40% { transform:translate(-5%, 25%) }
  50% { transform:translate(-15%, 10%) }
  60% { transform:translate(15%, 0%) }
  70% { transform:translate(0%, 15%) }
  80% { transform:translate(3%, 35%) }
  90% { transform:translate(-10%, 10%) }
}

/* --------------- Top section below --------------- */

#name {
  font-family: 'Duera Expanded Black';
  font-size: 57px;
  color: #093B50;
  padding: 50px 0px 0px 50px;
  margin-bottom: 0px;
}

#emailsymbol {
  font-family: 'Vary Light';
  font-size: 30px;
  color: #093B50;
  margin-top: -9px;
}

#linkedin {
  width: 32px;
}

#github {
  width: 32px;
}

#linkiconrow {
  width: 13%!important;
  margin-left: 50px;
}

.ui.grid>[class*="three column"].row>.column.linkicons {
  width: 60px!important;
}

a.ui.image.hvr-skew img {
  width: 50px;
}

.hvr-skew {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: transform;
  transition-property: transform;
}
.hvr-skew:hover, .hvr-skew:focus, .hvr-skew:active {
  -webkit-transform: skew(-7deg);
  transform: skew(-7deg);
}

/* Skew Forward */
.hvr-skew-forward {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transform-origin: 0 100%;
  transform-origin: 0 100%;
}
.hvr-skew-forward:hover, .hvr-skew-forward:focus, .hvr-skew-forward:active {
  -webkit-transform: skew(-7deg);
  transform: skew(-7deg);
}

/* ------------ Nav section below ------------- */

#nav {
  position: fixed;
  top: 65px;
  width: 90%;
  /* height: 9rem; */
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.navButton {
  font-family: 'Souvenir Light';
  font-size: 22px;
}

/* --------- General about section below ------------ */

#aboutgrid {
  margin-top: 85px;
  margin-bottom: 95px;
}

  /* ------- Blurb section below ---------- */

#blurbcolumn {
  margin: 0px 0px 0px 0px;
}

#greeting {
  font-family: 'Souvenir Light';
  color:#093B50;
  font-size: 33px;
}

#blurb {
  font-family: 'Souvenir Light';
  color:#093B50;
  line-height: 49px;
  font-size: 23px;
}

#pigemoji {
  font-size: 17px;
  margin-left: 0px;
  /* margin: 0; */
  /* position: absolute; */
  /* top: 20%; */
}

#pigspan {
  /* padding-left: 200px; */
  position:absolute;
  left: 500px;
}

.ui.toggle.checkbox.pigtoggle {
  transform: scale(.55);
  position: relative;
  top: 6px;
}

.ui.toggle.checkbox.pigtoggle input:focus:checked~.box:before, .ui.toggle.checkbox.pigtoggle input:focus:checked~label:before {
  background-color: #093B50 !important;
}



#wave {
  animation-name: wave-animation;  /* Refers to the name of your @keyframes element below */
  animation-duration: 4.5s;        /* Change to speed up or slow down */
  animation-iteration-count: 1;  /* Never stop waving :) */
  animation-delay: 0s;
  transform-origin: 30% 70%;       /* Pivot around the bottom-left palm */
  display: inline-block;

}

@keyframes wave-animation {
    0% { transform: rotate(0.0deg) }
   10% { transform: rotate(-8.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
   20% { transform: rotate(8.0deg) }
   30% { transform: rotate(-8.0deg) }
   40% { transform: rotate(8.0deg) }
   50% { transform: rotate(-10.0deg) }
   60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
  100% { transform: rotate( 0.0deg) }
}

/* --------------- Interests section below --------------- */


#interestscolumn {
  margin: 0px 30px 0px 30px
}

.button.ui.button.scrollbutton {
  font-family: 'Souvenir Light';
  background: transparent;
  color: #093B50;
  display: flex;
  margin: auto;
  border: 2px solid;
  box-shadow: 3px 3px 0 #888;
  cursor: pointer;
  outline: transparent;
  transition: box-shadow 0.2s ease;
  padding: 4 4;
}

.button.ui.button.scrollbutton:hover {
  box-shadow: 1px 1px 0 #888;
}

.button.ui.button.scrollbutton:active {
  box-shadow: 0px 0px 0;
}




/* Picture blob for interests */

#aboutsection {
  --spin: 80s;
}

.bgnowimage {
  width: 142%;
  height: 142%;
  position: absolute;
  left: -21%;
  top: -21%;
  background: url('./images/currentPicture.jpg');
  background-size: 94%;
  background-position: center center;
  display: flex;
  animation: spin var(--spin) linear infinite reverse;
  opacity: 1;
  z-index: 2;
}

.box {
  width: 225px;
  height: 225px;
  display: flex;
  margin: auto
}

.spin-container {
  width: 100%;
  height: 100%;
  animation: spin var(--spin) linear infinite;
}

.shape {
  width: 100%;
  height: 100%;
  transition: border-radius 1s ease-out;
  border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
  animation: morph 8s ease-in-out infinite both alternate;
  position: absolute;
  overflow: hidden;
  z-index: 5;
}

@keyframes morph {
  0% {border-radius: 40% 60% 60% 40% / 60% 30% 70% 40%;} 
  100% {border-radius: 70% 60%;} 
}

@keyframes spin {
  to {
    transform: rotate(1turn);
  }
}



/* -----------custom blobslider styling -------------  resoruce: https://www.cssportal.com/style-input-range/ */
#blobslider {
  height: 23px;
  -webkit-appearance: none;
  display: flex;
  margin: auto;
  direction: rtl;
  background: transparent;
}
#blobslider:focus {
  outline: none;
}
#blobslider::-webkit-slider-runnable-track {
  width: 100%;
  height: 3px;
  cursor: pointer;
  animate: 0.2s;
  box-shadow: 0px 0px 0px #000000;
  background: #093B50;
  border-radius: 5px;
  /* border: 0px solid #FFFFFF; */
  border: none;
}
#blobslider::-webkit-slider-thumb {
  /* box-shadow: 0px 0px 0px #FFFFFF; */
  border: 1px solid #093B50;
  height: 16px;
  width: 16px;
  border-radius: 5px;
  background: #FFFFFF;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -7px;
  margin-left: -20px;
}
#blobslider:focus::-webkit-slider-runnable-track {
  background: #093B50;
}
#blobslider::-moz-range-track {
  width: 100%;
  height: 3px;
  cursor: pointer;
  animate: 0.2s;
  box-shadow: 0px 0px 0px #000000;
  background: #093B50;
  border-radius: 2px;
  border: 0px solid #FFFFFF;
}
#blobslider::-moz-range-thumb {
  box-shadow: 0px 0px 0px #FFFFFF;
  border: 1px solid #093B50;
  height: 16px;
  width: 16px;
  border-radius: 5px;
  background: #FFFFFF;
  cursor: pointer;
}
#blobslider::-ms-track {
  width: 100%;
  height: 3px;
  cursor: pointer;
  animate: 0.2s;
  background: transparent;
  border-color: transparent;
  color: transparent;
}
#blobslider::-ms-fill-lower {
  background: #093B50;
  border: 0px solid #FFFFFF;
  border-radius: 4px;
  box-shadow: 0px 0px 0px #000000;
}
#blobslider::-ms-fill-upper {
  background: #093B50;
  border: 0px solid #FFFFFF;
  border-radius: 4px;
  box-shadow: 0px 0px 0px #000000;
}
#blobslider::-ms-thumb {
  margin-top: 1px;
  box-shadow: 0px 0px 0px #FFFFFF;
  border: 1px solid #093B50;
  height: 16px;
  width: 16px;
  border-radius: 5px;
  background: #FFFFFF;
  cursor: pointer;
  
}
#blobslider:focus::-ms-fill-lower {
  background: #093B50;
}
#blobslider:focus::-ms-fill-upper {
  background: #093B50;
}


/* --------------- Project container below ---------------- */

#projects {
  margin-top: 150px;
}



#projectcontainer {
  border: 0px;
}

#projectgrid {
  justify-content: center;
  margin-bottom: 175px;
  background: transparent;
}

div#projectcontainer.ui.segment {
  background: transparent;
}

#projectsheader {
  font-family: 'Souvenir Light';
  color: #093B50;
}

.ui.grid>[class*="three column"].row>.column.projectcolumn {
  width: 20%!important;
  margin: 0px 45px 0px 45px!important;
}


h2.ui.header.projecttitle {
  font-family: 'Souvenir Light';
  color: #093B50;
  text-align: center;
}

.projectblurb {
  font-family: 'Souvenir Light';
  color: #093B50;
}

.projectbullet {
  font-family: 'Souvenir Light';
  color: #093B50;
  text-align: center;
}

/* --------------- Fonts below ---------------- */

@font-face {
  font-family: 'Vary Light';
  font-style: normal;
  font-weight: normal;
  src: local('Vary Light'), url('./fonts/varylight.woff') format('woff');
  }

@font-face {
font-family: 'Duera Expanded Black';
font-style: normal;
font-weight: normal;
src: local('Duera Expanded Black'), url('./fonts/duera-expanded-black.ttf') format('woff');
}

@font-face {
 font-family: 'GT Pressura Light';
 font-style: normal;
 font-weight: normal;
 src: local('GT Pressura Light'), url('./fonts/gt-pressura-light.ttf') format('woff');
 }


@font-face {
  font-family: 'Souvenir Light';
  font-style: normal;
  font-weight: normal;
  src: local('Souvenir Light'), url('./fonts/souvenir-light.otf') format('woff');
  } 


/* From final project below*/

@font-face {
  font-family: 'Windsor Pro Bold';
  font-style: normal;
  font-weight: normal;
  src: local('Windsor Pro Bold'), url('./fonts/WindsorProBold.woff') format('woff');
  }

@font-face {
  font-family: 'Windsor Pro Regular';
  font-style: normal;
  font-weight: normal;
  src: local('Windsor Pro Regular'), url('./fonts/WindsorProRg.woff') format('woff');
  }
  
@font-face {
font-family: 'Windsor Pro Elongated';
font-style: normal;
font-weight: normal;
src: local('Windsor Pro Elongated'), url('./fonts/WindsorProElongated.woff') format('woff');
}

@font-face {
font-family: 'Windsor Pro Extra Bold Condensed';
font-style: normal;
font-weight: normal;
src: local('Windsor Pro Extra Bold Condensed'), url('./fonts/WindsorProXBoldCn.woff') format('woff');
}

@font-face {
font-family: 'Windsor Pro Ultra Heavy';
font-style: normal;
font-weight: normal;
src: local('Windsor Pro Ultra Heavy'), url('./fonts/WindsorProUltHv.woff') format('woff');
}

@font-face {
  font-family: 'danzza-medium-webfont';
  font-style: normal;
  font-weight: normal;
  src: local('danzza-medium-webfont'), url('./fonts/danzza-medium-webfont.ttf') format('woff');
  }

